# energy-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  analyzer.py  collector.py  graph.py  state.py  writer.py
app/api/: __init__.py  dependencies.py
app/api/routers/: __init__.py  analyze.py  newsletters.py  pipeline.py
app/core/: __init__.py  config.py  database.py  vector_store.py
app/evaluation/: __init__.py
app/models/: __init__.py  analysis.py  newsletter.py  raw_data.py  user_feedback.py
app/scrapers/: __init__.py
sql/: setup_vectors.sql
tests/: __init__.py  list_models.py  test_agents.py  test_api.py  test_mongodb.py  test_rag.py
