[project]
name = "energy-agent"
version = "0.1.0"
description = "Sistema multi-agente para inteligencia del sector energético colombiano"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    # Bases de datos
    "motor>=3.6.0",
    "supabase>=2.9.0",
    # Evaluación RAG
    "ragas>=0.2.0",
    # Scraping
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    # Tareas programadas
    "apscheduler>=3.10.0",
    # Configuración
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
